<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/item1"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/title_name"/>

    <item android:id="@+id/item2"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/title_my"/>

</menu>